feat - cart - Add API enpoint to update cart
